--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -20,12 +22,12 @@
             Professional Сustom
             Service Just <span class="yellow">for You</span>
           </h2>
-          <p>
+          <p class="main-text">
             We can do <span class="yellow">anything</span>
           </p>
         </div>
         <div class="form" id="form">
-          <h2 class="form-header">Calculate the price</h2>
+          <h2 class="form-header">Calculate the Price</h2>
           <p class="form-text">Choose level</p>
           <select name="levels" class="levels">
             <option value="10.99" selected>Hardcore</option>
@@ -61,19 +63,12 @@
               <input id="userName" class="popup-input popup-input-name" type="text" name="name">
             </label>
             <label>
-              <p class="popup-text">Enter your email</p>
+              <p class="popup-text popup-text-mail">Enter your email</p>
               <input id="userEmail" class="popup-input popup-input-mail" type="email" name="email" placeholder="example@gmail.com">
             </label>
             <label>
               <p class="popup-text">Your phone</p>
-              <span class="plus">+</span>
-              <select id="country" name="country" class="country">
-                <option value="" selected disabled></option>
-                <option value="38" data-imagesrc="./images/FLAG.png">🇺🇦</option>
-                <option value="73">ru</option>
-                <option value="48">🇵🇱</option>
-              </select>
-              <input id="userPhone" class="popup-input popup-input-phone" type="text" name="phone" >
+              <input id="userPhone" class="popup-input popup-input-phone" type="tel" name="phone">
             </label>
           </form>
         </div>
@@ -93,8 +88,9 @@
     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/prashantchaudhary/ddslick/master/jquery.ddslick.min.js" ></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/additional-methods.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/css/intlTelInput.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/js/intlTelInput-jquery.js"></script>
     <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
